--- a/Grafos/mainwindow.ui
+++ b/Grafos/mainwindow.ui
@@ -271,16 +271,6 @@
       </rect>
      </property>
     </widget>
-    <widget class="QListView" name="list">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>140</y>
-       <width>191</width>
-       <height>171</height>
-      </rect>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
@@ -305,6 +295,16 @@
      </property>
      <property name="text">
       <string>GO!</string>
+     </property>
+    </widget>
+    <widget class="QListWidget" name="list">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>140</y>
+       <width>191</width>
+       <height>171</height>
+      </rect>
      </property>
     </widget>
    </widget>
